
[package]
name = "server" 
version = "0.1.0"
edition = "2024"

[dependencies]
network = { path = "../network" }
storage = { path = "../storage" }
persistence = { path = "../persistence" }

tokio = { version = "1.48.0", features = ["full"] } 
bytes = "1" 
dashmap = "5" 
serde = { version = "1", features = ["derive"] } 
bincode = "1" 
anyhow = "1" 
tracing = "0.1" 

[dev-dependencies]
criterion = "0.4" 
proptest = "1"